# ingestion-plane

./: .gitignore  Makefile  README.md  debug_loki.py  pyproject.toml
.github/workflows/: jekyll.yml
contracts/: Makefile  go.mod
contracts/common/: __init__.py
contracts/common/v1/: __init__.py  common.pb.go  common.proto  common_pb2.py  common_pb2_grpc.py
contracts/indexfeed/v1/: indexfeed.pb.go  indexfeed.proto  indexfeed.swagger.json  indexfeed_grpc.pb.go  indexfeed_pb2.py  indexfeed_pb2_grpc.py
contracts/ingest/: __init__.py
contracts/ingest/v1/: __init__.py  ingest.pb.go  ingest.proto  ingest.swagger.json  ingest_grpc.pb.go  ingest_pb2.py  ingest_pb2_grpc.py
contracts/miner/: __init__.py
contracts/miner/v1/: __init__.py  miner.pb.go  miner.proto  miner.swagger.json  miner_grpc.pb.go  miner_pb2.py  miner_pb2_grpc.py
contracts/sampler/v1/: sampler.pb.go  sampler.proto  sampler.swagger.json  (+3 more)
deploy/: README.md  docker-compose.yml  generate-plan.sh  generate-traffic.sh
docs/: Gemfile  _config.yml
docs/_data/: toc.yml
docs/_includes/: editable.html  google-analytics.html  headers.html  navigation.html  scrolltop.html  tags.html
docs/pages/: about.md  index.md
gateway/: .gokit.yml  Dockerfile  LOKI_MOCK.md  Makefile  README.md  config-local.yaml  config-stdout.yaml  config.yaml  go.mod  go.sum  test_miner_integration.sh
gateway/cmd/: main.go
indexfeed/: go.mod  go.sum  main.go
miner/: README.md  __init__.py  drain3.ini  main.py  main_old.py  pyproject.toml
planner/: go.mod  go.sum  main.go
sampler/: go.mod  go.sum  main.go
(+56 files in other folders)
