[tool.poetry]
name = "miner-service"
version = "0.1.0"
description = "Miner service with protobuf contracts"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.75.1"
grpcio-tools = "^1.75.1"
protobuf = "^6.32.1"
redis = "^5.0.0"
drain3 = "^0.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
